# tools-cli

./: README.md  dstools.py  launch-dsTools.py  pyproject.toml  requirements.txt  setup.py  util.py
dstools/: __init__.py  dsTools-launcher.py  main.py  manual_dstool.py  menu.py  remove.py  requirements.txt  resume.py  start.py  stop.py
dstools/commands/: menu.py
dstools_cli/: __init__.py  cli.py  docker_utils.py  menu_utils.py
