[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dstools"
version = "0.1.0"
description = "A CLI tool to launch Docker-based data science images"
authors = [
  { name="Isaac Faber", email="isaac@afcai.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"


dependencies = [
  "click>=7.1",
  "docker>=5.0",
  "requests>=2.0",
  "simple-term-menu>=1.0" 
]

[project.scripts]

dstools = "dstools_cli.cli:main"


